# newton-clips

./: .gitignore  README.md  example.py  pyproject.toml
newtonclips/: __init__.py  example.py  renderer.py
